--- a/src/output.css
+++ b/src/output.css
@@ -794,6 +794,15 @@
   .border-transparent {
     border-color: transparent;
   }
+  .bg-\[\#2b235f\] {
+    background-color: #2b235f;
+  }
+  .bg-\[\#3a2f80\] {
+    background-color: #3a2f80;
+  }
+  .bg-\[\#6b5bd6\] {
+    background-color: #6b5bd6;
+  }
   .bg-\[\#4840bb\] {
     background-color: #4840bb;
   }
@@ -824,6 +833,9 @@
   .bg-purple-800 {
     background-color: var(--color-purple-800);
   }
+  .bg-purple-900 {
+    background-color: var(--color-purple-900);
+  }
   .bg-white {
     background-color: var(--color-white);
   }
@@ -847,6 +859,9 @@
   }
   .p-6 {
     padding: calc(var(--spacing) * 6);
+  }
+  .p-8 {
+    padding: calc(var(--spacing) * 8);
   }
   .px-4 {
     padding-inline: calc(var(--spacing) * 4);
@@ -975,6 +990,9 @@
   }
   .text-\[\#4840bb\] {
     color: #4840bb;
+  }
+  .text-gray-200 {
+    color: var(--color-gray-200);
   }
   .text-gray-500 {
     color: var(--color-gray-500);
